feat: farewell old crazyeggs. hello new crazyeggs